# uws4vad

./: .gitignore  README.md  env.txt  environment.yml  main.py  pyproject.toml  tmp.py  tmpmx.py  train.py  trainep.py  vis.out
.github/workflows/: wiki-sync.yml
aux/: bsampler.txt
bash/: train.sh
cfg/: 000.yaml  001.yaml  _feaud.yaml  _fergb.yaml  _fext.yaml  default.py  ucf.yaml  weddit.yml  xdv.yaml
cfg/data/: ucf.yaml  ucf_cliptsa_mil.yaml  ucf_i3drocng_mil.yaml  xdv.yaml  xdv_cliptsa_rgb-aud.yaml  xdv_cliptsa_rgb.yaml
cfg/data2222/: ucf_cliptsa.yaml  ucf_i3drocng.yaml  ucf_vadclip.yaml  xdv_cliptsa.yaml  xdv_cliptsa_waud.yaml  xdv_vadclip.yaml
cfg/dataload/: dflt.yaml  high.yaml  low.yaml
cfg/dataloader/: dflt.yaml  high.yaml  low.yaml
cfg/dataproc/: _dflt.yaml  _globo.yaml  itp.yaml  seq.yaml  ucf.yaml  ucf_seq.yaml  ucf_uni.yaml  uni.yaml  xdv.yaml  xdv_itp.yaml  xdv_uni.yaml
cfg/datatrnsfrm/: __clip.yaml  _globo.yaml  mil.yaml  mil_intrplt.yaml  seq.yaml
cfg/debug/: data.yaml  dflt.yaml  dltest.yaml  dltrain.yaml  fext.yaml  loss.yaml  model.yaml  mtrc.yaml  pstfwd.yaml  sampler.yaml  train.yaml  vis.yaml  vldt.yaml
cfg/dl/: ucf_cliptsa_mil.yaml
cfg/exp/: attnmil.yaml  aux.yaml  bndfm.yaml  bnwvad.yaml  cmala.yaml  dflt.yaml  dload_bag.yaml  dload_bag_cmala.yaml  dload_bag_mir.yaml  dload_sampler.yaml  dproc.yaml  rtfm.yaml  (+3 more)
data/: __init__.py  _data.py  testdl.py  traindl.py
docs/: Config.md  Dev.md  Home.md  Meth.md  config.md  overview.md
loss/: _loss.py  rnkg.py
nets/: __init__.py  _nets.py  attnomil.py  ca.py  cma.py  cmala.py  dam.py  macilsd.py  mindspore.py  rtfm.py  stacca.py
src/: fext.py  main.py  test.py  tmp.py  train.py
tools/: data_downloader.py  hfdataset_upload.py
utils/: __init__.py  log.py  misc.py  optima.py  setup.py  viz.py
vldt/: __init__.py  metric.py  vldt.py
(+323 files in other folders)
